--- a/style.css
+++ b/style.css
@@ -113,10 +113,408 @@
 }
 
 
-@media screen and (min-width:480px) { 
+@media screen and (min-width:480px) {  /*tablet*/
+#logo {
 
+        display:flex;
+        width:15%;
+    
+
+    }
+    body{
+        background-color:rgb(47, 141, 158);
+        margin:10px;
+        color:whitesmoke;
+
+    }
+
+
+    .container.middle {
+
+     
+        grid-column:2/5;
+        grid-row:2/3;
+        gap:10px;
+        display:flex;
+        margin-left:100px;
+        align-items:flex-end;
+              
+    }
+  .container.middle #image-1 {
+
+        grid-column:2/5;
+        grid-row:2/3;
+        gap:10px;
+        display:flex;
+        
+
+              
+    }
+
+
+    #hero { /*snowcone*/
+        width:30%;
+        
+    }
+    #content{
+        display:grid;
+        grid-template-columns:1fr 1fr 1fr 1fr;
+        grid-template-rows:.5fr .5fr .5fr .5fr .3fr;
+    }
+
+    article {
+        
+        background-image: url("Snowcone.jpg");
+        background-repeat:no-repeat;
+        background-position:center;
+
+        height:250px;
+       
+        grid-column:1/5;
+        grid-row:1/3;
+        
+
+    }
+
+    .title {
+        
+        grid-column: 1/2;
+        grid-row: 2/3;
+        margin-top: 45px;
+         display:flex;
+       flex-direction:column;
+       align-content:flex-end;
+    }
+
+
+    #image-1{ /*snowman*/
+  
+        width:30%;
+        height:50%;
+        margin-left: 20px;
+        margin-top: 20px;
+
+    }
+    #image-2{/*bigfoot*/
+        width:30%;
+        height:50%;
+        margin-top: 20px;
+
+
+    }
+    #image-3{ /*rainy rainbow*/
+        width:30%;
+        height:50%;
+        margin-top: 20px;
+
+    }
+
+    #navigation{
+        display:flex;
+        justify-items:space-around;
+        align-content:center;
+        margin-right:10px;
+        font-size:35px;
+
+
+    }
+
+    .sub {
+
+        display:flex;
+        grid-column:2/5;
+        grid-row:2/4;
+        flex-wrap: nowrap;
+        justify-content:center;
+
+        align-items:flex-end;
+        gap:30px;
+        margin-left:100px;
+
+    }
+
+    .subtext {
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content:center;
+    }
+
+    .container.last {
+        display:flex;
+        grid-column:2/5;
+        grid-row:4/4;
+        justify-content: center;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-left: 100px;
+
+    }
+    #pointer {
+ 
+      
+       grid-column:1/2;
+       grid-row:4/5;
+
+    }
+
+    #image-4{
+       width:200%;
+       height:100%;
+    }
+   
+    h1{
+        display:flex;
+        justify-content:center;
+    }
+
+    h2{
+        display:flex;
+        justify-content:center;
+    }
+
+    
+    p {
+        color:whitesmoke;
+        display:flex;
+        justify-content:center;
+    }
+
+    #order {
+        border-style: groove;
+        border-radius: 5px;
+        margin:5px 10px 5px 10px;
+        background-color:rgb(0, 170, 192);
+        height:20%;
+        display:flex;
+        align-items:flex-end;
+        justify-content: center;
+
+    }
+
+    header{
+        display:flex;
+        justify-content: space-between;
+        padding:10px;
+        
+  
+    }
+    
+    header ul {
+        display:flex;
+        list-style-type: none; 
+        gap: 20px;
+        
+    }
+    footer {
+        margin:5px 10px 5px 10px;
+        display:flex;
+        justify-content:center;
+        border-style: groove;
+        border-radius: 5px;
+
+    }
 }
 
 @media screen and (min-width:1280px) {
+    #logo {
+
+        display:flex;
+        width:15%;
     
+
+    }
+    body{
+        background-color:rgb(47, 141, 158);
+        margin:10px;
+        color:whitesmoke;
+
+    }
+
+
+    .container.middle {
+
+     
+        grid-column:2/5;
+        grid-row:2/3;
+        gap:10px;
+        display:flex;
+        margin-left:100px;
+        align-items:flex-end;
+              
+    }
+  .container.middle #image-1 {
+
+        grid-column:2/5;
+        grid-row:2/3;
+        gap:10px;
+        display:flex;
+        
+
+              
+    }
+
+
+    #hero { /*snowcone*/
+        width:30%;
+        
+    }
+    #content{
+        display:grid;
+        grid-template-columns:1fr 1fr 1fr 1fr;
+        grid-template-rows:.5fr .5fr .5fr .5fr .3fr;
+    }
+
+    article {
+        
+        background-image: url("Snowcone.jpg");
+        background-repeat:no-repeat;
+        background-position:center;
+
+        height:250px;
+       width: 100%;
+        grid-column:1/5;
+        grid-row:1/3;
+        
+
+    }
+
+    .title {
+        
+        grid-column: 1/2;
+        grid-row: 2/3;
+        margin-top: 45px;
+         display:flex;
+       flex-direction:column;
+       align-content:flex-end;
+    }
+
+
+    #image-1{ /*snowman*/
+  
+        width:30%;
+        height:50%;
+        margin-left: 20px;
+        margin-top: 20px;
+
+    }
+    #image-2{/*bigfoot*/
+        width:30%;
+        height:50%;
+        margin-top: 20px;
+
+
+    }
+    #image-3{ /*rainy rainbow*/
+        width:30%;
+        height:50%;
+        margin-top: 20px;
+
+    }
+
+    #navigation{
+        display:flex;
+        justify-items:space-around;
+        align-content:center;
+        margin-right:10px;
+        font-size:35px;
+
+
+    }
+
+    .sub {
+
+        display:flex;
+        grid-column:2/5;
+        grid-row:2/4;
+        flex-wrap: nowrap;
+        justify-content:center;
+
+        align-items:flex-end;
+        gap:30px;
+        margin-left:100px;
+
+    }
+
+    .subtext {
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content:center;
+    }
+
+    .container.last {
+        display:flex;
+        grid-column:2/5;
+        grid-row:4/4;
+        justify-content: center;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-left: 100px;
+
+    }
+    #pointer {
+ 
+      
+       grid-column:1/2;
+       grid-row:4/5;
+
+    }
+
+    #image-4{
+       width:200%;
+       height:100%;
+    }
+   
+    h1{
+        display:flex;
+        justify-content:center;
+    }
+
+    h2{
+        display:flex;
+        justify-content:center;
+    }
+
+    
+    p {
+        color:whitesmoke;
+        display:flex;
+        justify-content:center;
+    }
+
+    #order {
+        border-style: groove;
+        border-radius: 5px;
+        margin:5px 10px 5px 10px;
+        background-color:rgb(0, 170, 192);
+        height:20%;
+        display:flex;
+        align-items:flex-end;
+        justify-content: center;
+
+    }
+
+    header{
+        display:flex;
+        justify-content: space-between;
+        padding:10px;
+        
+  
+    }
+    
+    header ul {
+        display:flex;
+        list-style-type: none; 
+        gap: 20px;
+        
+    }
+    footer {
+        margin:5px 10px 5px 10px;
+        display:flex;
+        justify-content:center;
+        border-style: groove;
+        border-radius: 5px;
+
+    }
 }
